--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "node-fetch": "^2.6.1",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2",
     "zlib-sync": "^0.1.7"
