--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "jszip": "^3.7.1",
     "node-fetch": "^2.6.1",
     "sequelize": "^6.6.5",
-    "sqlite3": "^5.0.2",
+    "sqlite3": "^5.0.2"
+  },
+  "optionalDependencies": {
     "zlib-sync": "^0.1.7"
   }
 }
